apps/base/infra-zonemta/deploy/mongo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - port: 27017
    name: mongo
    targetPort: mongo
  selector:
    app.kubernetes.io/name: zonemta
    app.kubernetes.io/component: mongo
